--- a/ExportTinyCA_UI.ui
+++ b/ExportTinyCA_UI.ui
@@ -11,7 +11,7 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>589</width>
+            <width>585</width>
             <height>300</height>
         </rect>
     </property>
@@ -171,6 +171,10 @@
                         <name>name</name>
                         <cstring>tempdir</cstring>
                     </property>
+                    <property>
+                        <name>toolTip</name>
+                        <string>The directory, where the openssl.cnf template can be found</string>
+                    </property>
                 </widget>
                 <widget>
                     <class>QToolButton</class>
@@ -232,6 +236,10 @@
                         <name>name</name>
                         <cstring>tinycadir</cstring>
                     </property>
+                    <property>
+                        <name>toolTip</name>
+                        <string>the TinyCA database directory, usually: ~/.TinyCA/</string>
+                    </property>
                 </widget>
                 <widget>
                     <class>QToolButton</class>
@@ -292,6 +300,10 @@
                     <property stdset="1">
                         <name>name</name>
                         <cstring>dname</cstring>
+                    </property>
+                    <property>
+                        <name>toolTip</name>
+                        <string>The name of  CA </string>
                     </property>
                 </widget>
                 <widget>
